--- a/src/app/app.html
+++ b/src/app/app.html
@@ -230,6 +230,7 @@
         </defs>
       </svg>
       <h1>Hello, {{ title() }}</h1>
+      <button class="btn-success btn">bom dia</button>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
