--- a/src/app/features/layout/main/main.html
+++ b/src/app/features/layout/main/main.html
@@ -1,6 +1,6 @@
-<div class="container py-3 py-md-4">
+<div class="container">
   <header
-    class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3 mb-4 p-3 rounded bg-white shadow-sm"
+    class="d-flex flex-row justify-content-between align-items-start align-items-md-center gap-3 mb-4 p-3 rounded bg-white shadow-sm"
   >
     <h1 class="m-0 fw-bold fs-4">{{ nomeDoRestaurante }}</h1>
     <button
